# channel_ping_pong

./: Cargo.toml  Makefile  Readme.md
src/: green.rs  main.rs  thread.rs
