[package]
name = "thread_pong"
version = "0.1.0"
authors = ["maxluchs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "thread"
path = "src/thread.rs"

[[bin]]
name = "green"
path = "src/green.rs"

[dependencies]
crossbeam = "0.8.0"
crossterm = "0.19.0"
tokio = { version = "1.3.0", features = ["full"] }
